# philips-wiz-bulb-core

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: SECRETS.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-05-14-philips-wiz-bulb-stack-design.md
philips_wiz_bulb_core/: __init__.py  api.py  bulb.py  cli.py  config.py  discover.py  main.py  registry.py  scenes.py
systemd/: philips-wiz-bulb-core.service
tests/: conftest.py  test_api.py  test_bulb.py  test_config.py  test_discover.py  test_main_smoke.py  test_registry.py  test_scenes.py
