[project]
name = "philips-wiz-bulb-core"
version = "0.1.0"
description = "Local HTTP daemon for controlling Philips WiZ smart bulbs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "deepanshutr" }]
keywords = ["philips", "wiz", "smart-bulb", "iot", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "typer>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
philips-wiz-bulb-core = "philips_wiz_bulb_core.cli:app"

[project.urls]
Homepage = "https://github.com/deepanshutr/philips-wiz-bulb-core"
Issues = "https://github.com/deepanshutr/philips-wiz-bulb-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: requires a real WiZ bulb reachable on the LAN"]
